BATCHEE-138 ensure we don't fail when a chunk is stopped with JobOperator, thanks a lot Christian Berger for his analyzis+report of this issue